force-app/main/default/objects/OpportunityLineItem/fields/Annual_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Annual_Unit_Price__c</fullName>
    <description>Annual unit price from Quote Line Item (what reps work with) - stored separately since UnitPrice cannot be set when TotalPrice is specified</description>
    <label>Annual Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>