force-app/main/default/objects/OpportunityLineItem/fields/Billing_Amount__c.field-meta.xml
<CustomField>
    <fullName>Billing_Amount__c</fullName>
    <description>Actual prorated billing amount from synced Quote Line Item. Used for operational visibility while TotalPrice maintains annual amounts for revenue calculations.</description>
    <label>Billing Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>