force-app/main/default/objects/OpportunityLineItem/fields/Prorated_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Prorated_Unit_Price__c</fullName>
    <description>Prorated unit price from Quote Line Item based on service term length</description>
    <label>Prorated Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>