force-app/main/default/objects/OpportunityLineItem/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Quote that this Opportunity Line Item was synced from</description>
    <label>Source Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Opportunity Line Items</relationshipLabel>
    <relationshipName>Opportunity_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>