force-app/main/default/objects/OpportunityLineItem/fields/QuoteLineItem__c.field-meta.xml
<CustomField>
    <fullName>QuoteLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Quote Line Item that this Opportunity Line Item was synced from</description>
    <label>Source Quote Line Item</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Opportunity Line Items</relationshipLabel>
    <relationshipName>Opportunity_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>