force-app/main/default/objects/OpportunityLineItem/fields/Term_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Term_End_Date__c</fullName>
    <description>Service term end date synced from QuoteLineItem for asset lifecycle management. Used when creating assets from OpportunityLineItems to establish deactivation dates.</description>
    <label>Term End Date</label>
    <type>Date</type>
</CustomField>