force-app/main/default/objects/OpportunityLineItem/fields/Term_Length_Months__c.field-meta.xml
<CustomField>
    <fullName>Term_Length_Months__c</fullName>
    <description>Term length in months synced from QuoteLineItem for asset lifecycle management. Calculated using monthly proration (30.44-day average) for consistent asset term tracking.</description>
    <label>Term Length (Months)</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>