force-app/main/default/objects/OpportunityLineItem/fields/Term_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Term_Start_Date__c</fullName>
    <description>Service term start date synced from QuoteLineItem for asset lifecycle management. Used when creating assets from OpportunityLineItems to establish activation dates.</description>
    <label>Term Start Date</label>
    <type>Date</type>
</CustomField>